--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'java-library'
+    id 'com.github.kamatama41.git-release' version '0.3.0'
 }
 
 group 'io.github.usbharu'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -18,4 +18,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+gitRelease {
+    groupId = "io.github.usbharu"
+    artifactId = "HayasakaNLP"
+    repoUri = "git@github.com:usbharu/HayasakaNLP.git"
 }
